# watch-time

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.cache/clangd/index/: imconfig.h.59A0E128389B2DFA.idx  imgui.h.964AFAFA10051BBC.idx  imgui_impl_glfw.h.A0C09923A8D825E5.idx  imgui_impl_opengl3.h.E234F7A3F833C92C.idx  main.cpp.1AD855E7C9F09FA3.idx  stopwatch.cpp.F431005B77A94870.idx  stopwatch.hpp.08CB68DEA16477FA.idx
.clangd/index/: imconfig.h.59A0E128389B2DFA.idx  imgui.h.964AFAFA10051BBC.idx  imgui_impl_glfw.h.A0C09923A8D825E5.idx  imgui_impl_opengl3.h.E234F7A3F833C92C.idx  main.cpp.1AD855E7C9F09FA3.idx
imgui/: CMakeLists.txt
src/: clock.cpp  main.cpp  stopwatch.cpp  stopwatch.hpp
